<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Activity Main -->
    <string name="app_name">Beca</string>
    <string name="action_settings">Settings</string>
    <string name="bienvenida">BIENVENIDO</string>
    <string name="mensaje">Bienvenido al 
        Sistema Único de Beneficiarios de Educación Superior (SUBES)</string>
        
    <string name="btmesaje">Convocatoria</string>

    <!-- Activity Inicio -->

    <string name="title_activity_inicio">Convocatoria</string>
    <string name="info">Información</string>
    <string name="becas">Becas</string>
    <string name="tips">Tips</string>

    <!-- Activity Becas -->

    <string name="title_activity_becas">Becas</string>
    <string name="curp">https://consultas.curp.gob.mx</string>
    <string name="cnbes">www.cnbes.sep.gob.mx</string>
    
    
     
    
    <!-- Activity Manutención -->

    <string name="title_activity_manutencion">Manutencion</string>
    <string name="req">Requisitos</string>

    <!-- Activity Tips -->
    <string name="title_activity_tips">Tips de Estudio</string>
    <string name="tip1">Tip1</string>
    <string name="tip2">Tip2</string>
    <string name="tip3">Tip3</string>
    <string name="tip4">Tip4</string>

    <!-- Activity Transporte -->
    <string name="title_activity_transporte">Transporte</string>

    <!-- Activity FechaManActivity -->

    <string name="title_activity_fecha_man">Fechas Beca Manutención</string>

    <!-- Activity CalenManActivity -->

    <string name="title_activity_calen_man">Calendario Manutención</string>

    <!-- Activity PagomActivity -->

    <string name="title_activity_pagom">Pagos de Beca Manutención</string>

    
    
    
    <!-- Activity DerechosActivity -->

    <string name="title_activity_derechos">Derechos del Becario</string>
        <string name="cnbes1">www.cnbes.sep.gob.mx</string>
    

    <!-- Activity CalenTransActivity -->

    <string name="title_activity_calen_trans">Calendario Transporte</string>

    <!-- Activity CalenTransActivity -->
    <string name="title_activity_fechat">Fechas Beca Transporte</string>

    <!-- Activity pagotActivity -->
    <string name="title_activity_pagot">Pagos de Beca Transporte </string>
    
        <!-- Activity DerechostActivity -->
    
    <string name="title_activity_derechost">Derechos del Becario</string>
        <string name="cnbes2">www.cnbes.sep.gob.mx</string>
    

</resources>
