<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/fondoceleste"
    tools:context=".TipsActivity" >

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/title"/>
    
    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="Inconsolata"
        android:layout_centerInParent="true"
        android:layout_below="@+id/tv1"
        android:onClick="tip1"
        android:text="@string/tip1"   />
    
     <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn1"
        />
    
     <Button
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="Inconsolata"
        android:layout_centerInParent="true"
        android:layout_below="@+id/tv2"
        android:onClick="tip2"
        android:text="@string/tip2"   />
     
     <Button
        android:id="@+id/btn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="Inconsolata"
        android:layout_centerInParent="true"
        android:layout_below="@+id/btn2"
        android:onClick="tip3"
        android:text="@string/tip3"   />
     
     <Button
        android:id="@+id/btn4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="Inconsolata"
        android:layout_centerInParent="true"
        android:layout_below="@+id/btn3"
        android:onClick="tip4"
        android:text="@string/tip4"   />
    
    
    
    
    
    
    
    

</RelativeLayout>
