<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/beca"
    tools:context=".MainActivity" >
    
    <TextView
        android:id="@+id/tv0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
      />
    
    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv0"
      />
    
    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv1"
      />
    
    <TextView
        android:id="@+id/tv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv2"
      />
    
    
    

    <TextView
        android:id="@+id/tv4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="Inconsolata"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tv3"
        android:text="@string/bienvenida" />
    
    <TextView
        android:id="@+id/tv5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="Inconsolata"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tv4"
        android:text="@string/mensaje" />
    
    <Button
        android:id="@+id/btn1" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="Inconsolata"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:onClick="cambioPantalla"
        android:text="@string/btmesaje"/>

</RelativeLayout>
